cambios en tsting

--- a/historia.html
+++ b/historia.html
@@ -18,5 +18,8 @@ para git
     <p>hola a todos como anda ? 2 </p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ut repellendus necessitatibus reiciendis pariatur cumque eum delectus laudantium deserunt nulla veritatis sit voluptates id alias fugiat totam, ipsum hic repellat.</p>
     
+    <footer>
+        <p>Hola aca haciendo un footer pára el curso de platzi</p>
+    </footer>
 </body>
 </html>
