correcion de errores

--- a/historia.html
+++ b/historia.html
@@ -12,7 +12,7 @@ para git
 
 </head>
 <body>
-    <h2>estos son nuevos cambios en la pagina </h2>
+    <h2>Estos son nuevos cambios en la página </h2>
 
     <p>hola a todos como anda ?</p>
     <p>hola a todos como anda ? 2 </p>
