--- a/historia.html
+++ b/historia.html
@@ -14,9 +14,12 @@
     <h2>Estos son nuevos cambios en la página </h2>
 
     <p>hola a todos como anda ?</p>
-    <p>hola a todos como anda ? 2 </p>
+    <p>hola a todos como anda ? </p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ut repellendus necessitatibus reiciendis pariatur cumque eum delectus laudantium deserunt nulla veritatis sit voluptates id alias fugiat totam, ipsum hic repellat.</p>
-    
+    <div>
+            <p><img src="986.jpg" alt="" width="50%"></p>
+
+    </div>
     <footer>
         <p>Hola aca haciendo un footer pára el curso de platzi</p>
     </footer>
