los binarios se guardan en el gitignore

--- a/historia.html
+++ b/historia.html
@@ -16,8 +16,8 @@
     <p>hola a todos como anda ?</p>
     <p>hola a todos como anda ? </p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ut repellendus necessitatibus reiciendis pariatur cumque eum delectus laudantium deserunt nulla veritatis sit voluptates id alias fugiat totam, ipsum hic repellat.</p>
-    <div>
-            <p><img src="986.jpg" alt="" width="50%"></p>
+    <div class="container">
+            <p><img src="989.jpg" alt="" width="50%" ></p>
 
     </div>
     <footer>
