--- a/historia.html
+++ b/historia.html
@@ -18,7 +18,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ut repellendus necessitatibus reiciendis pariatur cumque eum delectus laudantium deserunt nulla veritatis sit voluptates id alias fugiat totam, ipsum hic repellat.</p>
     <div class="container">
             <p><img src="989.jpg" alt="" width="50%" ></p>
-
+<p>master 1 para un rebase</p>
     </div>
     <footer>
         <p>Hola aca haciendo un footer pára el curso de platzi</p>
