--- a/historia.html
+++ b/historia.html
@@ -21,7 +21,9 @@
 <p>master 1 para un rebase</p>
     </div>
     <footer>
-        <p>Hola aca haciendo un footer pára el curso de platzi</p>
+        <p>Hola aca haciendo un footer pára el curso de platzi
+            cambios en el footer para platzi
+        </p>
     </footer>
 </body>
 </html>
