ejemplos de platzi y los cambios de mi vida

--- a/historia.html
+++ b/historia.html
@@ -22,7 +22,7 @@
     </div>
     <footer>
         <p>Hola aca haciendo un footer pára el curso de platzi
-            cambios en el footer para platzi
+            cambios en el footer para el acmbio de mi vida
         </p>
     </footer>
 </body>
